# beauchbot

./: .gitignore  Dockerfile  README.md  agent_factory.py  docker-compose.yml  main.py  message_server.py  pyproject.toml  render.yaml  server.py
docker/: attach  run  setup  start  stop
mcp_server/: README.md  __init__.py  main.py  resources.py  server.py
mcp_server/tools/: __init__.py  contacts.py  google_docs.py  system_tools.py  twilio_messaging.py
scripts/: encode_service_account.py  ping_agent.py  test_google_docs.py
tools/: __init__.py  google_docs.py  system.py  twilio.py
utils/: agent_factory.py  google_utils.py  phone_utils.py
